# ai-genai-transition

./: PROGRESS.md  README.md
llm-prompt-patterns/: README.md  hr-policy-qa.agent.agent.md  invoice-extraction-validation.md  pii-redaction.md
projects/hr-policy-rag/: README.md  ingest.py  pyproject.toml  query.py  rag_query.py
projects/hr-policy-rag/data/: hr_policy.txt
projects/invoice-crew/: README.md  agent_test.py  pyproject.toml
