[project]
name = "hr-policy-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Nuxray",email = "sagarchanne8@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain (>=1.3.14,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
